force-app/main/default/objects/Volunteer_Request__c/Volunteer_Request__c.object-meta.xml
<CustomObject>
    <label>Volunteer Request</label>
    <nameField>
        <label>Activity/Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>