force-app/main/default/objects/Volunteer_Request__c/fields/Age1__c.field-meta.xml
<CustomField>
    <fullName>Age1__c</fullName>
    <formula>FLOOR((TODAY() - DOB__c )/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>