force-app/main/default/objects/Volunteer_Request__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>13 to 20</fullName>
            </value>
            <value>
                <fullName>21 to 30</fullName>
            </value>
            <value>
                <fullName>31 to 50</fullName>
            </value>
            <value>
                <fullName>51 &amp; Above</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>