force-app/main/default/objects/Volunteer_Request__c/fields/Ambulation__c.field-meta.xml
<CustomField>
    <fullName>Ambulation__c</fullName>
    <label>Ambulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Needs walking aid</fullName>
            </value>
            <value>
                <fullName>Wheel-chair bound</fullName>
            </value>
            <value>
                <fullName>Bed bound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>