force-app/main/default/objects/Volunteer_Request__c/fields/Any_Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Information__c</fullName>
    <label>Any Other Information</label>
    <length>2550</length>
    <type>LongTextArea</type>
</CustomField>