force-app/main/default/objects/Volunteer_Request__c/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <label>Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Assigned</fullName>
            </value>
            <value>
                <fullName>Minimum Assigned</fullName>
            </value>
            <value>
                <fullName>Not assigned</fullName>
                <default>true</default>
                <label>Not assigned</label>
            </value>
            <value>
                <fullName>Partially Assigned</fullName>
            </value>
            <value>
                <fullName>Register</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>