force-app/main/default/objects/Volunteer_Request__c/fields/Attendance_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Attendance_QR_Code__c</fullName>
    <formula>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=&quot;+ Attendance_URL__c ,&quot;QR code&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance QR Code</label>
    <type>Text</type>
</CustomField>