force-app/main/default/objects/Volunteer_Request__c/fields/Attendance_URL__c.field-meta.xml
<CustomField>
    <fullName>Attendance_URL__c</fullName>
    <formula>$Label.Landing_URL +&quot;timesheet?id=&quot;+ Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance URL</label>
    <type>Text</type>
</CustomField>