force-app/main/default/objects/Volunteer_Request__c/fields/Befriender__c.field-meta.xml
<CustomField>
    <fullName>Befriender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Befriender</label>
    <type>Checkbox</type>
</CustomField>