force-app/main/default/objects/Volunteer_Request__c/fields/Cancel_Sent__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Sent</label>
    <type>Checkbox</type>
</CustomField>