force-app/main/default/objects/Volunteer_Request__c/fields/Cancel_VR__c.field-meta.xml
<CustomField>
    <fullName>Cancel_VR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel VR</label>
    <type>Checkbox</type>
</CustomField>