force-app/main/default/objects/Volunteer_Request__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <inlineHelpText>Please enter the name of the client for this request.</inlineHelpText>
    <label>Client Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>