force-app/main/default/objects/Volunteer_Request__c/fields/Client_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Client_Satisfaction__c</fullName>
    <label>Client Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5-Very satisfied</fullName>
            </value>
            <value>
                <fullName>4-Satisfied</fullName>
            </value>
            <value>
                <fullName>3-Undecided</fullName>
            </value>
            <value>
                <fullName>2-Dissatisfied</fullName>
            </value>
            <value>
                <fullName>1-Very Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>