force-app/main/default/objects/Volunteer_Request__c/fields/Common_tasks_for_events__c.field-meta.xml
<CustomField>
    <fullName>Common_tasks_for_events__c</fullName>
    <label>Common tasks for events</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ushers</fullName>
            </value>
            <value>
                <fullName>Registration Booth</fullName>
            </value>
            <value>
                <fullName>Photographer</fullName>
            </value>
            <value>
                <fullName>Stage Crew</fullName>
            </value>
            <value>
                <fullName>Event Facilitators</fullName>
            </value>
            <value>
                <fullName>Information &amp; Redemption Booth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>