force-app/main/default/objects/Volunteer_Request__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CorporateAffairs</fullName>
                <label>Corporate Affairs</label>
            </value>
            <value>
                <fullName>DeafAccessServices</fullName>
                <label>Deaf Access Services</label>
            </value>
            <value>
                <fullName>FinanceAdmin</fullName>
                <label>Finance &amp; Admin</label>
            </value>
            <value>
                <fullName>ISS</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>