force-app/main/default/objects/Volunteer_Request__c/fields/Dialect__c.field-meta.xml
<CustomField>
    <fullName>Dialect__c</fullName>
    <label>Dialect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Hokkien</fullName>
            </value>
            <value>
                <fullName>Teochew</fullName>
            </value>
            <value>
                <fullName>Hainanese</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>