force-app/main/default/objects/Volunteer_Request__c/fields/Dialysis_Session__c.field-meta.xml
<CustomField>
    <fullName>Dialysis_Session__c</fullName>
    <label>Dialysis Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>135 Morning</fullName>
            </value>
            <value>
                <fullName>135 Afternoon</fullName>
            </value>
            <value>
                <fullName>135 Evening</fullName>
            </value>
            <value>
                <fullName>246 Morning</fullName>
            </value>
            <value>
                <fullName>246 Afternoon</fullName>
            </value>
            <value>
                <fullName>246 Evening</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
                <isActive>false</isActive>
                <label>Afternoon</label>
            </value>
            <value>
                <fullName>Evening</fullName>
                <isActive>false</isActive>
                <label>Evening</label>
            </value>
            <value>
                <fullName>Morning</fullName>
                <isActive>false</isActive>
                <label>Morning</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>