force-app/main/default/objects/Volunteer_Request__c/fields/Dietary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirements__c</fullName>
    <label>Dietary Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Diabetic</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>