force-app/main/default/objects/Volunteer_Request__c/fields/Dwelling_Type__c.field-meta.xml
<CustomField>
    <fullName>Dwelling_Type__c</fullName>
    <label>Dwelling Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-rm flat</fullName>
            </value>
            <value>
                <fullName>2-rm flat</fullName>
            </value>
            <value>
                <fullName>3-rm flat</fullName>
            </value>
            <value>
                <fullName>4-rm flat</fullName>
            </value>
            <value>
                <fullName>5-rm flat</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>