force-app/main/default/objects/Volunteer_Request__c/fields/Email1__c.field-meta.xml
<CustomField>
    <fullName>Email1__c</fullName>
    <label>Client Email</label>
    <type>Email</type>
</CustomField>