force-app/main/default/objects/Volunteer_Request__c/fields/Engagement_Type_F__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type_F__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Type</label>
    <type>Text</type>
</CustomField>