force-app/main/default/objects/Volunteer_Request__c/fields/Ethnic_Group__c.field-meta.xml
<CustomField>
    <fullName>Ethnic_Group__c</fullName>
    <label>Ethnic Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Malay</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Eurasian</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>