force-app/main/default/objects/Volunteer_Request__c/fields/Gender_Preference__c.field-meta.xml
<CustomField>
    <fullName>Gender_Preference__c</fullName>
    <label>Gender Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>