force-app/main/default/objects/Volunteer_Request__c/fields/General_Remarks__c.field-meta.xml
<CustomField>
    <fullName>General_Remarks__c</fullName>
    <label>General Remarks</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>