force-app/main/default/objects/Volunteer_Request__c/fields/House_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>House_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>House Cleaning</label>
    <type>Checkbox</type>
</CustomField>