force-app/main/default/objects/Volunteer_Request__c/fields/House_Painting__c.field-meta.xml
<CustomField>
    <fullName>House_Painting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>House Painting</label>
    <type>Checkbox</type>
</CustomField>