force-app/main/default/objects/Volunteer_Request__c/fields/If_others_Please_Specify1_del__c.field-meta.xml
<CustomField>
    <fullName>If_others_Please_Specify1_del__c</fullName>
    <label>If others, please specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>