force-app/main/default/objects/Volunteer_Request__c/fields/If_others_Please_specify__c.field-meta.xml
<CustomField>
    <fullName>If_others_Please_specify__c</fullName>
    <label>If others, please specify</label>
    <length>18</length>
    <type>Text</type>
</CustomField>