force-app/main/default/objects/Volunteer_Request__c/fields/Important_Information_Patient_Background__c.field-meta.xml
<CustomField>
    <fullName>Important_Information_Patient_Background__c</fullName>
    <label>Important Information/Patient Background</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>