force-app/main/default/objects/Volunteer_Request__c/fields/Key_Objective__c.field-meta.xml
<CustomField>
    <fullName>Key_Objective__c</fullName>
    <label>Key Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>