force-app/main/default/objects/Volunteer_Request__c/fields/Location_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Postal_Code__c</fullName>
    <label>Location Postal Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>