force-app/main/default/objects/Volunteer_Request__c/fields/Meal_Provision__c.field-meta.xml
<CustomField>
    <fullName>Meal_Provision__c</fullName>
    <label>Meal Provision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>