force-app/main/default/objects/Volunteer_Request__c/fields/Medication_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Medication_Reconciliation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medication Reconciliation</label>
    <type>Checkbox</type>
</CustomField>