force-app/main/default/objects/Volunteer_Request__c/fields/Minimum_Volunteer_Required__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Volunteer_Required__c</fullName>
    <label>Minimum Volunteer Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>