force-app/main/default/objects/Volunteer_Request__c/fields/No_of_Unnamed_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>No_of_Unnamed_Volunteers__c</fullName>
    <label>No. of Unnamed Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>