force-app/main/default/objects/Volunteer_Request__c/fields/Number_of_Volunteer_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Volunteer_Accepted__c</fullName>
    <label>Number of Volunteer Accepted</label>
    <summaryFilterItems>
        <field>Assigned_Volunteer__c.Accepted_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Assigned_Volunteer__c.Volunteer_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>