force-app/main/default/objects/Volunteer_Request__c/fields/Number_of_Volunteers_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Volunteers_Required__c</fullName>
    <label>Number of Volunteers Required</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>