force-app/main/default/objects/Volunteer_Request__c/fields/Other_Attire__c.field-meta.xml
<CustomField>
    <fullName>Other_Attire__c</fullName>
    <label>Other Attire</label>
    <length>18</length>
    <type>Text</type>
</CustomField>