force-app/main/default/objects/Volunteer_Request__c/fields/Other_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Number__c</fullName>
    <label>Other Number</label>
    <type>Phone</type>
</CustomField>