force-app/main/default/objects/Volunteer_Request__c/fields/Others1__c.field-meta.xml
<CustomField>
    <fullName>Others1__c</fullName>
    <label>Others</label>
    <type>TextArea</type>
</CustomField>