force-app/main/default/objects/Volunteer_Request__c/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <inlineHelpText>Please Specify if You choose others</inlineHelpText>
    <label>Others</label>
    <type>TextArea</type>
</CustomField>