force-app/main/default/objects/Volunteer_Request__c/fields/Others_Diet_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Others_Diet_Requirement__c</fullName>
    <description>If value is not found  in Diet Requirement Pick list.</description>
    <inlineHelpText>Please enter, if any Others Diet Requirement</inlineHelpText>
    <label>Others Diet Requirement</label>
    <length>50</length>
    <type>Text</type>
</CustomField>