force-app/main/default/objects/Volunteer_Request__c/fields/Others_Please_Indicate__c.field-meta.xml
<CustomField>
    <fullName>Others_Please_Indicate__c</fullName>
    <description>Change Label from Others (Please Indicate) based user Request</description>
    <label>Cancel Reason (Please Indicate)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>