force-app/main/default/objects/Volunteer_Request__c/fields/Outcome_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Remarks__c</fullName>
    <label>Outcome Remarks</label>
    <type>TextArea</type>
</CustomField>