force-app/main/default/objects/Volunteer_Request__c/fields/OutSpokenness__c.field-meta.xml
<CustomField>
    <fullName>OutSpokenness__c</fullName>
    <label>Outspokenness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>