force-app/main/default/objects/Volunteer_Request__c/fields/Overall_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Overall_Outcome__c</fullName>
    <label>Overall Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Partially Met</fullName>
            </value>
            <value>
                <fullName>Completely Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>