force-app/main/default/objects/Volunteer_Request__c/fields/Patient_Escort__c.field-meta.xml
<CustomField>
    <fullName>Patient_Escort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Escort</label>
    <type>Checkbox</type>
</CustomField>