force-app/main/default/objects/Volunteer_Request__c/fields/Period1__c.field-meta.xml
<CustomField>
    <fullName>Period1__c</fullName>
    <label>Period</label>
    <type>TextArea</type>
</CustomField>