force-app/main/default/objects/Volunteer_Request__c/fields/Physical_Strenghth__c.field-meta.xml
<CustomField>
    <fullName>Physical_Strenghth__c</fullName>
    <label>Physical Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>