force-app/main/default/objects/Volunteer_Request__c/fields/Programme_Event__c.field-meta.xml
<CustomField>
    <fullName>Programme_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme/ Event</label>
    <referenceTo>Programme_Events__c</referenceTo>
    <relationshipLabel>Volunteer Requests</relationshipLabel>
    <relationshipName>Volunteer_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>