force-app/main/default/objects/Volunteer_Request__c/fields/Programme_Stage__c.field-meta.xml
<CustomField>
    <fullName>Programme_Stage__c</fullName>
    <formula>TEXT(Programme_Event__r.Programme_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programme Stage</label>
    <type>Text</type>
</CustomField>