force-app/main/default/objects/Volunteer_Request__c/fields/Reasons_to_Terminate__c.field-meta.xml
<CustomField>
    <fullName>Reasons_to_Terminate__c</fullName>
    <label>Reasons to Terminate</label>
    <type>TextArea</type>
</CustomField>