force-app/main/default/objects/Volunteer_Request__c/fields/Recruitment_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Deadline__c</fullName>
    <label>Recruitment Deadline</label>
    <required>true</required>
    <type>Date</type>
</CustomField>