force-app/main/default/objects/Volunteer_Request__c/fields/Request_Title__c.field-meta.xml
<CustomField>
    <fullName>Request_Title__c</fullName>
    <label>Request Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>